// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Breadcrumb basic usage with contentItems including rendered components and strings 1`] = `
<bolt-breadcrumb bolt-component>
  <nav class="c-bolt-breadcrumb"
       aria-label="Breadcrumb"
       role="navigation"
  >
    <ol class="c-bolt-breadcrumb__list">
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           class="e-bolt-text-link"
        >
          Home
        </a>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           class="e-bolt-text-link"
        >
          Other Page
        </a>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           class="e-bolt-text-link"
        >
          Sub Page
        </a>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           aria-current
           class="e-bolt-text-link"
        >
          Fourth Page
        </a>
      </li>
    </ol>
  </nav>
</bolt-breadcrumb>
`;

exports[`Bolt Breadcrumb default 1`] = `
<bolt-breadcrumb bolt-component>
  <nav class="c-bolt-breadcrumb"
       aria-label="Breadcrumb"
       role="navigation"
  >
    <ol class="c-bolt-breadcrumb__list">
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           class="e-bolt-text-link"
        >
          Home
        </a>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           class="e-bolt-text-link"
        >
          Other Page
        </a>
      </li>
      <li class="c-bolt-breadcrumb__item">
        <a href="#!"
           class="e-bolt-text-link"
        >
          Sub Page
        </a>
      </li>
    </ol>
  </nav>
</bolt-breadcrumb>
`;
